--- a/css/resume.css
+++ b/css/resume.css
@@ -2,8 +2,7 @@ body {
   line-height: 24px;
   font-family: "Open Sans", sans-serif;
   line-height: 24px;
-  background: transparent linear-gradient(180deg, #1d1dff 0%, #000080 100%) 0%
-    0% no-repeat padding-box;
+  background: transparent linear-gradient(180deg, #1d1dff 0%, #000080 100%) 0% 0% no-repeat padding-box;
 }
 
 h1,
@@ -91,13 +90,25 @@ div {
   border-radius: 50%;
   width: 100px;
   color: white;
-  background: transparent
-    linear-gradient(85deg, #ff7a00 0%, #db2f87 17%, #0700ff72 58%, #00ffc2 100%)
-    0% 0% no-repeat padding-box;
+  background: transparent linear-gradient(85deg, #ff7a00 0%, #db2f87 17%, #0700ff72 58%, #00ffc2 100%) 0% 0% no-repeat padding-box;
+}
+
+.lesser {
+  text-align: center;
+  line-height: 60px;
+  height: 60px;
+  border-radius: 50%;
+  width: 60px;
+  right: 100px;
+  color: white;
+  background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+  opacity: .8;
 }
 
 .resume__skills {
   margin: 50px;
+  position: relative;
+  height: 300px;
 }
 
 .a,
@@ -105,10 +116,36 @@ div {
 .c,
 .d,
 .e {
-  position: relative;
+  position: absolute;
+}
+
+.a,
+.b {
+  height: 80px;
+  width: 80px;
+  line-height: 70px;
+}
+
+.b {
+  top: 185px;
+  left: 40px;
 }
 
 .c {
-  top: -200px;
-  left: 100px;
+  top: 141px;
+  left: 115px;
+  opacity: .8;
+  font-weight: bold;
+  color: var(--main-blue);
+  background: radial-gradient(circle, #db2f87 0%, #0700ff72 100%);
+}
+
+.d {
+  top: 260px;
+  left: 160px;
+}
+
+.e {
+  top: 90px;
+  left: 210px;
 }
