--- a/css/style.css
+++ b/css/style.css
@@ -1,324 +1,336 @@
 body {
-    font-family: 'Open Sans', sans-serif;
-    --main-blue: #000080;
-    --second-blue: #1D1DFF;
-    --white: #fff;
-    --orange: #FF7A00;
-    --links: #C32676;
-    color: var(--main-blue);
+  font-family: "Open Sans", sans-serif;
+  --main-blue: #000080;
+  --second-blue: #1d1dff;
+  --white: #fff;
+  --orange: #ff7a00;
+  --links: #c32676;
+  color: var(--main-blue);
 }
 
 ul {
-    display: inline;
+  display: inline;
 }
 
 div {
-    margin: 20px;
-    padding: 20px;
+  margin: 20px;
+  padding: 20px;
 }
 
-
 h2 {
-    font-family: "Coiny",
-        cursive;
-    font-size: 38px;
+  font-family: "Coiny", cursive;
+  font-size: 38px;
 }
 
 h3 {
-    font-size: 24px;
-    font-weight: bold;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .hero {
-    background: transparent linear-gradient(180deg, #1D1DFF 0%, #000080 100%) 0% 0% no-repeat padding-box;
-    color: var(--white);
+  background: transparent linear-gradient(180deg, #1d1dff 0%, #000080 100%) 0%
+    0% no-repeat padding-box;
+  color: var(--white);
 }
 
 .hero__list {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .hero__link {
-    color: var(--white);
-    text-decoration: none;
-    padding-left: 30px;
+  color: var(--white);
+  text-decoration: none;
+  padding-left: 30px;
 }
 
 .hero__link:hover {
-    text-shadow: 7px 9px 3px var(--links);
-    font-weight: bold;
+  text-shadow: 7px 9px 3px var(--links);
+  font-weight: bold;
 }
 
 .hero__content {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .hero__intro {
-    width: 40%;
-    padding-bottom: 40px;
+  width: 40%;
+  padding-bottom: 40px;
 }
 
 .hero__img {
-    width: 25%;
+  width: 25%;
 }
 
 .hero__image {
-    height: 50vh;
-    position: absolute;
-    z-index: 2;
+  height: 50vh;
+  position: absolute;
+  z-index: 2;
 }
 
 .hero__hi {
-    font-weight: bold;
-    font-size: 42px;
-    padding: 20px;
+  font-weight: bold;
+  font-size: 42px;
+  padding: 20px;
 }
 
 .hero__welcome,
 .hero__about {
-    padding: 10px;
-    line-height: 30px;
+  padding: 10px;
+  line-height: 30px;
 }
 
 .hero__welcome {
-    font-size: 40px;
-    text-shadow: 2px 2px 2px var(--links);
+  font-size: 40px;
+  text-shadow: 2px 2px 2px var(--links);
 }
 
 .hero__about {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .interests__list {
-    display: flex;
-    line-height: 25px;
+  display: flex;
+  line-height: 25px;
 }
 
 .interest__item {
-    padding: 20px;
+  padding: 20px;
 }
 
 .resume__text {
-    padding: 20px;
-    line-height: 24px;
+  padding: 20px;
+  line-height: 24px;
 }
 
-
 .ball {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    position: absolute;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  position: absolute;
 }
 
 .one {
-    background: transparent linear-gradient(85deg, #FF7A00 0%, #DB2F87 17%, #0700FF72 58%, #00FFC2 100%) 0% 0% no-repeat padding-box;
-    opacity: 0.9;
-    right: 385px;
-    top: 255px;
-    z-index: 1;
+  background: transparent
+    linear-gradient(85deg, #ff7a00 0%, #db2f87 17%, #0700ff72 58%, #00ffc2 100%)
+    0% 0% no-repeat padding-box;
+  opacity: 0.9;
+  right: 385px;
+  top: 255px;
+  z-index: 1;
 }
 
 .two {
-    background: transparent linear-gradient(130deg, #FF7A00 0%, #DB2F87 17%, #0700FF72 58%, #00FFC2 100%) 0% 0% no-repeat padding-box;
-    opacity: 0.9;
-    right: 300px;
-    top: 120px;
-    z-index: 1;
+  background: transparent
+    linear-gradient(
+      130deg,
+      #ff7a00 0%,
+      #db2f87 17%,
+      #0700ff72 58%,
+      #00ffc2 100%
+    )
+    0% 0% no-repeat padding-box;
+  opacity: 0.9;
+  right: 300px;
+  top: 120px;
+  z-index: 1;
 }
 
 .three {
-    background: transparent linear-gradient(85deg, #FF7A00 0%, #DB2F87 17%, #0700FF72 58%, #00FFC2 100%) 0% 0% no-repeat padding-box;
-    opacity: 0.9;
-    right: 229px;
-    top: 235px;
-    z-index: 1;
-
+  background: transparent
+    linear-gradient(85deg, #ff7a00 0%, #db2f87 17%, #0700ff72 58%, #00ffc2 100%)
+    0% 0% no-repeat padding-box;
+  opacity: 0.9;
+  right: 229px;
+  top: 235px;
+  z-index: 1;
 }
 
 .about {
-    margin-bottom: 0;
-    padding-bottom: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .about__holder {
-    display: flex;
+  display: flex;
 }
 
 .about__title {
-    margin: 20px;
-    text-shadow: 2px 3px 3px var(--orange);
+  margin: 20px;
+  text-shadow: 2px 3px 3px var(--orange);
 }
 
 .about__me,
 .about__topics {
-    padding-top: 0;
-    line-height: 25px;
+  padding-top: 0;
+  line-height: 25px;
 }
 
 .about__me {
-    width: 100%;
+  width: 100%;
 }
 
 .about__list {
-    list-style-image: url(/assets/icons8-star-40.png);
-    font-weight: bold;
+  list-style-image: url(/assets/icons8-star-40.png);
+  font-weight: bold;
 }
 
 .about__resume {
-    color: var(--links);
-    font-weight: bold;
+  color: var(--links);
+  font-weight: bold;
 }
 
 .about__resume:hover {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .polygon {
-    margin: auto;
-    position: absolute;
-    top: 664px;
-    right: 500px;
-    width: 300px;
-    height: 75px;
-    background-color: var(--main-blue);
-    -webkit-clip-path: polygon(50% 77%, 0 52%, 100% 51%);
-    clip-path: polygon(50% 100%, 0 52%, 100% 51%);
-
+  margin: auto;
+  position: absolute;
+  top: 664px;
+  right: 500px;
+  width: 300px;
+  height: 75px;
+  background-color: var(--main-blue);
+  -webkit-clip-path: polygon(50% 77%, 0 52%, 100% 51%);
+  clip-path: polygon(50% 100%, 0 52%, 100% 51%);
 }
 
 .main__title {
-    color: var(--main-blue);
-    font-weight: bold;
-    margin: 0 50px;
-    text-shadow: 2px 3px 3px var(--orange);
+  color: var(--main-blue);
+  font-weight: bold;
+  margin: 0 50px;
+  text-shadow: 2px 3px 3px var(--orange);
 }
 
 .stack__list {
-    display: flex;
-    text-align: center;
-    justify-content: space-evenly;
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
 }
 
 .stack__icon {
-    width: 50px;
+  width: 50px;
 }
 
 .main__blog {
-    background-color: rgba(255, 123, 0, 0.698);
-    margin: 30px auto;
-    text-align: center;
-    width: 30%;
-    line-height: 25px;
-    font-weight: bold;
-    border-radius: 5px;
-    box-shadow: 6px 7px 8px var(--main-blue);
-    padding: 30px;
+  background-color: rgba(255, 123, 0, 0.698);
+  margin: 30px auto;
+  text-align: center;
+  width: 30%;
+  line-height: 25px;
+  font-weight: bold;
+  border-radius: 5px;
+  box-shadow: 6px 7px 8px var(--main-blue);
+  padding: 30px;
 }
 
 .blog__btn {
-    margin-top: 30px;
-    font-size: 21px;
-    padding: 10px 18px;
-    border-radius: 13px;
-    background: rgb(0, 0, 128);
-    background: linear-gradient(0deg, rgb(0, 0, 128) 30%, rgb(29, 29, 255) 77%);
+  margin-top: 30px;
+  font-size: 21px;
+  padding: 10px 18px;
+  border-radius: 13px;
+  background: rgb(0, 0, 128);
+  background: linear-gradient(0deg, rgb(0, 0, 128) 30%, rgb(29, 29, 255) 77%);
 }
 
 .blog__btn:hover {
-    box-shadow: 5px 4px 13px rgba(50, 50, 50, 0.75);
+  box-shadow: 5px 4px 13px rgba(50, 50, 50, 0.75);
 }
 
 .blog__link {
-    color: var(--white);
-    text-decoration: none;
+  color: var(--white);
+  text-decoration: none;
 }
 
 .projects__holder {
-    display: flex;
+  display: flex;
 }
 
 .project {
-    border: 1px solid var(--orange);
-    border-radius: 5px;
-    height: 200px;
-    width: 350px;
-    line-height: 26px;
-    background-color: #fff;
+  border: 1px solid var(--orange);
+  border-radius: 5px;
+  height: 200px;
+  width: 350px;
+  line-height: 26px;
+  background-color: #fff;
 }
 
 .main__projects {
-    background-color: aquamarine;
+  background-color: aquamarine;
+  text-align: center;
 }
 
 .project__name {
-    font-size: 22px;
-    font-weight: bold;
-    padding: 10px;
+  font-size: 22px;
+  font-weight: bold;
+  padding: 10px;
 }
 
 .project__demo,
 .project__repo {
-    color: var(--links);
+  color: var(--links);
 }
 
 .project {
-    position: relative;
+  position: relative;
 }
 
 .project__icon {
-    position: absolute;
-    right: 65px;
-    bottom: 35px;
+  position: absolute;
+  right: 65px;
+  bottom: 35px;
 }
 
-
 .contact {
-    background-color: var(--main-blue);
-    height: 250px;
-    padding: 50px;
-    text-align: center;
+  background-color: var(--main-blue);
+  height: 250px;
+  padding: 50px;
+  text-align: center;
 }
 
 .contact__container {
-    width: 30%;
-    margin: auto;
-    height: 125px;
-    border-radius: 5px;
-    background-color: var(--white);
+  width: 40%;
+  margin: auto;
+  height: 150px;
+  border-radius: 5px;
+  background-color: var(--white);
 }
 
 .contact__list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-around;
 }
 
 .contact__title {
-    color: var(--orange);
-    text-shadow: 1px 2px var(--main-blue);
-    font-weight: bold;
-    padding: 14px;
-    ;
+  color: var(--orange);
+  text-shadow: 1px 2px var(--main-blue);
+  font-weight: bold;
+  padding: 14px;
+}
+
+.contact__text {
+  color: var(--links);
 }
 
 .cball {
-    border-radius: 50%;
-    position: absolute;
-    height: 100px;
-    width: 100px;
-    background: transparent linear-gradient(85deg, #FF7A00 0%, #DB2F87 17%, #0700FF72 58%, #00FFC2 100%) 0% 0% no-repeat padding-box;
-
+  border-radius: 50%;
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  background: transparent
+    linear-gradient(85deg, #ff7a00 0%, #db2f87 17%, #0700ff72 58%, #00ffc2 100%)
+    0% 0% no-repeat padding-box;
 }
 
 .sml {
-    left: 420px;
-    top: 1720px;
-    height: 60px;
-    width: 60px;
+  left: 420px;
+  top: 1800px;
+  height: 60px;
+  width: 60px;
 }
 
 .big {
-    left: 337px;
+  left: 337px;
 }
